# ffmpeg

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fox/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVPacketQueue.cpp  CMakeLists.txt  native-lib.cpp
app/src/main/ffmpeg/include/libavutil/: ffversion.h
app/src/main/java/com/fox/ffmpegtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fox/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
